--- a/src/popup.html
+++ b/src/popup.html
@@ -112,7 +112,7 @@
       <img data-i18n-attribute-message-id="info" data-i18n-attribute="alt" alt="" src="/img/info.svg" / >
     </a>
     <hr>
-    <table class="menu">
+    <table class="menu display-none">
       <tr class="menu-item hover-highlight keyboard-nav" id="open-new-tab-in" tabindex="0">
         <td>
           <img class="menu-icon" alt="" src="/img/tab-new-16.svg" />
@@ -151,14 +151,14 @@
     </table>
     <hr>
     <div class="sub-header-wrapper flx-row flx-space-between">
-      <div class="sub-header" data-i18n-message-id="containers"></div>
+      <div class="sub-header display-none" data-i18n-message-id="containers"></div>
       <h4 class="moz-vpn-logotype vpn-status-container-list display-none">Mozilla VPN
         <span class="moz-vpn-connection-status-indicator container-list-status-icon">
         </span>
       </h4>
     </div>
     <div class="scrollable identities-list">
-      <div class="searchbar">
+      <div class="searchbar display-none">
         <label for="search-terms"
                class="hide-label"
                data-i18n-message-id="filterInputLabel">
@@ -203,8 +203,8 @@
         <button id="moz-vpn-learn-more" class="moz-vpn-cta primary-cta" data-i18n-message-id="getMozillaVpn"></button>
       </div>
     </div>
-    <v-padding-hack-footer></v-padding-hack-footer> <!--prevents last container from getting covered up by the 'manage containers button' when list is long-->
-    <div class="bottom-btn keyboard-nav controller" id="manage-containers-link" tabindex="0" data-i18n-message-id="manageContainers"></div>
+    <!-- <v-padding-hack-footer></v-padding-hack-footer> --> <!--prevents last container from getting covered up by the 'manage containers button' when list is long-->
+    <div class="bottom-btn keyboard-nav controller display-none" id="manage-containers-link" tabindex="0" data-i18n-message-id="manageContainers"></div>
   </div>
 
 
